deployments/airflow/airflow-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: airflow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      serviceAccountName: airflow-worker
      containers:
      - name: git-sync
        image: "k8s.gcr.io/git-sync/git-sync:v3.3.0"
        volumeMounts:
           - name: airflow-dags
             mountPath: /opt
        securityContext:
            runAsUser: 0
      - name: airflow-webserver
        image: apache/airflow:2.8.1
        command: ["bash", "-c"]
        args:
          - pip install apache-airflow-providers-trino;
            rm -r -f dags;
            ln -s  /sync-dags/airflow/dags dags;
            airflow db init;
            airflow users create --username admin --password admin --firstname admin --lastname admin --role Admin --email admin@example.com;
            airflow webserver
        volumeMounts:
        - name: airflow-config
          mountPath: /opt/airflow/airflow.cfg
          subPath: airflow.cfg
        - name: airflow-config
          mountPath: /opt/airflow/webserver_config.py
          subPath: webserver_config.py
        - name: airflow-config
          mountPath: /opt/airflow/plugins/trino_operator.py
          subPath: trino_operator.py
        - name: airflow-dags
          mountPath: /sync-dags
      - name: airflow-scheduler
        image: apache/airflow:2.8.1
        command: ["bash", "-c"]
        args:
          - pip install apache-airflow-providers-trino;
            rm -r -f dags;
            ln -s  /sync-dags/airflow/dags dags;
            airflow scheduler;
        volumeMounts:
        - name: airflow-config
          mountPath: /opt/airflow/airflow.cfg
          subPath: airflow.cfg
          readOnly: true
        - name: airflow-config
          mountPath: /opt/airflow/plugins/trino_operator.py
          subPath: trino_operator.py
        - name: airflow-dags
          mountPath: /sync-dags
      volumes:
      - name: airflow-config
        configMap:
            name: airflow-config
      - name: airflow-dags
        #emptyDir: {}
        persistentVolumeClaim:
            claimName: airflow-dags-pvc
