deployments/airflow/postgres-airflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-airflow-svc
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: postgres-airflow-deployment 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: postgres 
  template: 
    metadata: 
      labels: 
        app: postgres 
    spec:
      containers: 
        - name: postgres 
          image: postgres:13
          imagePullPolicy: "IfNotPresent" 
          ports: 
            - containerPort: 5432 
          volumeMounts: 
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          securityContext:
            runAsUser: 0
      volumes: 
        - name: postgredb 
          persistentVolumeClaim: 
            claimName: postgres-airflow-pv-claim
